--- a/FluentEditor/FluentEditor.csproj
+++ b/FluentEditor/FluentEditor.csproj
@@ -109,19 +109,19 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ControlPalette\CustomView\ColorTestContent.xaml.cs">
+    <Compile Include="ControlPalette\ThemePaletteView\ColorTestContent.xaml.cs">
       <DependentUpon>ColorTestContent.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ControlPalette\CustomView\Common\BindableBase.cs" />
-    <Compile Include="ControlPalette\CustomView\Common\Theme.cs" />
-    <Compile Include="ControlPalette\CustomView\Common\ThemePaletteEntry.cs" />
-    <Compile Include="ControlPalette\CustomView\CustomPaletteViewModel.cs" />
-    <Compile Include="ControlPalette\CustomView\CustomPaletteView.xaml.cs">
-      <DependentUpon>CustomPaletteView.xaml</DependentUpon>
+    <Compile Include="ControlPalette\ThemePaletteView\Common\BindableBase.cs" />
+    <Compile Include="ControlPalette\ThemePaletteView\Common\Theme.cs" />
+    <Compile Include="ControlPalette\ThemePaletteView\Common\ThemePaletteEntry.cs" />
+    <Compile Include="ControlPalette\ThemePaletteView\ThemePaletteViewModel.cs" />
+    <Compile Include="ControlPalette\ThemePaletteView\ThemePaletteView.xaml.cs">
+      <DependentUpon>ThemePaletteView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ControlPalette\CustomView\Common\ThemeManager.cs" />
-    <Compile Include="ControlPalette\Model\Custom\CustomPaletteModel.cs" />
-    <Compile Include="ControlPalette\Model\Custom\CustomPreset.cs" />
+    <Compile Include="ControlPalette\ThemePaletteView\Common\ThemeManager.cs" />
+    <Compile Include="ControlPalette\Model\ThemePalette\ThemePaletteModel.cs" />
+    <Compile Include="ControlPalette\Model\ThemePalette\ThemePreset.cs" />
     <Compile Include="OuterNav\INavItem.cs" />
     <Compile Include="ControlPalette\ColorMapping.cs" />
     <Compile Include="ControlPalette\Model\ControlPaletteExportProvider.cs" />
@@ -371,7 +371,7 @@
     <Content Include="Resources\zh-cn\demodata.json" />
     <Content Include="Resources\pt-pt\controlPaletteData.json" />
     <Content Include="Resources\pt-pt\demodata.json" />
-    <Content Include="Resources\en-us\customPaletteData.json" />
+    <Content Include="Resources\en-us\themePaletteData.json" />
     <PRIResource Include="Resources\zh-cn\Resources.resw" />
     <PRIResource Include="Resources\nl-nl\Resources.resw" />
     <PRIResource Include="Resources\es-es\Resources.resw" />
@@ -397,7 +397,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="ControlPalette\CustomView\ColorTestContent.xaml">
+    <Page Include="ControlPalette\ThemePaletteView\ColorTestContent.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -413,11 +413,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ControlPalette\CustomView\TextBlockButtonStyle.xaml">
+    <Page Include="ControlPalette\ThemePaletteView\TextBlockButtonStyle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ControlPalette\CustomView\ThemeDictionaries.xaml">
+    <Page Include="ControlPalette\ThemePaletteView\ThemeDictionaries.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -425,11 +425,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ControlPalette\CustomView\CustomPaletteView.xaml">
+    <Page Include="ControlPalette\ThemePaletteView\ThemePaletteView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="ControlPalette\CustomView\ThemeManager.xaml">
+    <Page Include="ControlPalette\ThemePaletteView\ThemeManager.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
