Added System theme

--- a/FluentEditor/FluentEditor.csproj
+++ b/FluentEditor/FluentEditor.csproj
@@ -424,6 +424,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ControlPalette\ThemePaletteView\SystemThemeDictionaries.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="ControlPalette\ThemePaletteView\ThemeDictionaries.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
