--- a/FluentEditor/FluentEditor.csproj
+++ b/FluentEditor/FluentEditor.csproj
@@ -109,8 +109,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\BindableBase.cs" />
+    <Compile Include="ThemePalette\Data\ThemeColorPalette.cs" />
+    <Compile Include="ThemePalette\Model\ThemeExtraPalette.cs" />
     <Compile Include="ThemePalette\Model\ThemePreset.cs" />
     <Compile Include="ThemePalette\Model\ThemePaletteModel.cs" />
+    <Compile Include="ThemePalette\Styles\PaletteEditorStyles.xaml.cs">
+      <DependentUpon>PaletteEditorStyles.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ThemePalette\ThemeColorMapping.cs" />
     <Compile Include="ThemePalette\ThemePaletteResources.xaml.cs">
       <DependentUpon>ThemePaletteResources.xaml</DependentUpon>
@@ -411,6 +417,18 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="ThemePalette\Styles\PaletteEditorStyles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ThemePalette\Styles\TextBlockStyle.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ThemePalette\Styles\TextBlockButtonStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ThemePalette\ThemePaletteResources.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -442,9 +460,7 @@
       <Name>FluentEditorShared</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ThemePalette\Styles\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
