--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -36,7 +36,7 @@
 # For a complete CI/CD sample to get started with GitHub Action workflows for Desktop Applications,
 # refer to https://github.com/microsoft/github-actions-for-desktop-apps
 
-name:  WPF .NET Core
+name:  UWP
 
 on:
   push:
@@ -56,7 +56,7 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: FluentEditor.sln                         # Replace with your solution name, i.e. MyWpfApp.sln.
+      Solution_Name: FluentEditor.sln   # Replace with your solution name, i.e. MyWpfApp.sln.
       
     steps:
     - name: Checkout
