--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -57,6 +57,7 @@ jobs:
 
     env:
       Solution_Name: FluentEditor.sln   # Replace with your solution name, i.e. MyWpfApp.sln.
+      Project_Directory: FluentEditor\
       
     steps:
     - name: Checkout
@@ -84,7 +85,7 @@ jobs:
     - name: Decode the pfx
       run: |
         $pfx_cert_byte = [System.Convert]::FromBase64String("${{ secrets.Base64_Encoded_Pfx }}")
-        $certificatePath = Join-Path -Path $env:Wap_Project_Directory -ChildPath GitHubActionsWorkflow.pfx
+        $certificatePath = Join-Path -Path $env:Project_Directory -ChildPath GitHubActionsWorkflow.pfx
         [IO.File]::WriteAllBytes("$certificatePath", $pfx_cert_byte)
 
     # Create the app package by building and packaging the Windows Application Packaging project
