--- a/.github/workflows/uwp.yml
+++ b/.github/workflows/uwp.yml
@@ -50,8 +50,7 @@ jobs:
 
     strategy:
       matrix:
-        configuration: [Debug]
-     #  configuration: [Debug, Release]
+        configuration: [Debug, Release]
 
     runs-on: windows-latest  # For a list of available runner types, refer to 
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
@@ -65,12 +64,6 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
-    # Install the .NET Core workload
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.101
 
     # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
     - name: Setup MSBuild.exe
